--- a/pages/index-music/index-music.wxml
+++ b/pages/index-music/index-music.wxml
@@ -29,7 +29,7 @@
   <header-title title="推荐歌曲" bindonClickMore="onClickMore" />
   <view class="recommendSixList">
     <block wx:for="{{ recommendSixList }}" wx:key="id">
-      <song-item-six item="{{ item }}" bindtap="onMusicItemTap" data-item="{{ item }}" />
+      <song-item-six item="{{ item }}" bindtap="onMusicItemTap" data-id="{{ item.id }}" data-index="{{ index }}" />
     </block>
   </view>
 </view>
