--- a/pages/recommend-music/recommend-music.wxml
+++ b/pages/recommend-music/recommend-music.wxml
@@ -9,7 +9,7 @@
   <view>
     <block wx:for="{{ musicList }}" wx:key="id">
       <view>
-        <music-item2 itemData="{{ item }}" index="{{ index + 1 }}" bindtap="onMusicItemTap" data-item="{{ item }}" />
+        <music-item2 itemData="{{ item }}" index="{{ index + 1 }}" bindtap="onMusicItemTap" data-item="{{ item }}" data-index="{{ index }}" />
       </view>
     </block>
   </view>
